sumo/tests/dfrouter/errors/detector_files/broken_detectors_file2c/errors.dfrouter
Error: An exception occurred! Type:UTFDataFormatException, Message:Exceede bytes limits ü, 6-byte sequence.
 In file ' input_messstrecke.det.xml'
 At line/column 2/1.

Quitting (on error).
